// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseGherkin parse basic feature file into an AST 1`] = `
Array [
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 1,
    },
    "name": "Minimal",
    "tags": Array [],
    "type": "feature",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 5,
      "line": 2,
    },
    "name": "minimalistic",
    "tags": Array [],
    "type": "scenario",
  },
  Object {
    "keyword": "Given ",
    "location": Object {
      "column": 9,
      "line": 3,
    },
    "text": "the minimalism",
    "type": "step",
  },
  Object {
    "keyword": "When ",
    "location": Object {
      "column": 9,
      "line": 4,
    },
    "text": "you change nothing",
    "type": "step",
  },
  Object {
    "keyword": "Then ",
    "location": Object {
      "column": 9,
      "line": 5,
    },
    "text": "it's still small",
    "type": "step",
  },
]
`;

exports[`parseGherkin should parse comments 1`] = `
Array [
  Object {
    "location": Object {
      "column": 1,
      "line": 1,
    },
    "text": "# Some comment",
    "type": "comment",
  },
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 2,
    },
    "name": "Lorem ipsum dolor sit amet",
    "tags": Array [],
    "type": "feature",
  },
  Object {
    "location": Object {
      "column": 1,
      "line": 4,
    },
    "text": "  # Another one",
    "type": "comment",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 3,
      "line": 5,
    },
    "name": "foo",
    "tags": Array [],
    "type": "scenario",
  },
]
`;

exports[`parseGherkin should parse tags on Feature 1`] = `
Array [
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 2,
    },
    "name": "baz",
    "tags": Array [
      Object {
        "location": Object {
          "column": 1,
          "line": 1,
        },
        "name": "@foo",
      },
      Object {
        "location": Object {
          "column": 6,
          "line": 1,
        },
        "name": "@bar",
      },
    ],
    "type": "feature",
  },
]
`;

exports[`parseGherkin should parse tags on Scenario 1`] = `
Array [
  Object {
    "description": null,
    "keyword": "Feature",
    "language": "en",
    "location": Object {
      "column": 1,
      "line": 1,
    },
    "name": "some feature",
    "tags": Array [],
    "type": "feature",
  },
  Object {
    "description": null,
    "keyword": "Scenario",
    "location": Object {
      "column": 3,
      "line": 3,
    },
    "name": "some scenario",
    "tags": Array [
      Object {
        "location": Object {
          "column": 3,
          "line": 2,
        },
        "name": "@foo",
      },
      Object {
        "location": Object {
          "column": 8,
          "line": 2,
        },
        "name": "@bar",
      },
    ],
    "type": "scenario",
  },
]
`;
